tests/fixtures/valid/ngl013_valid.py
from nicegui import ui

ui.button('Save', color='primary').classes('px-4')
