tests/fixtures/invalid/ngl013_invalid.py
from nicegui import ui

ui.button('Save', color='primary').classes('text-red-500')
